fix: ui polishment on smaller screens

--- a/src/app/components/TextGrid/TextGrid.module.scss
+++ b/src/app/components/TextGrid/TextGrid.module.scss
@@ -54,21 +54,18 @@
             display: flex;
             flex-direction: row;
             
-            @media(max-width: 1460px) {
-                display: flex;
-                flex-direction: column;
-                
-            }
-            
             @media(max-width: 1100px) {
-                margin-left: -2%;
+                min-width: 65vw;
+                margin-left: -0.5%;
                 flex-direction: row !important;
                 border-top: none;
                 gap: 0.05rem;
             }
-            
-            @media(max-width: 620px) {
+
+            @media(max-width: 575px) {
+                min-width: 90vw;
                 flex-direction: column !important;
+                padding-right: 1rem;
             }
             
             .quote {
@@ -91,8 +88,6 @@
                 padding-left: 2rem;
                 font-size: 1rem;
                 line-height: 1.375rem;
-
-                // white-space: pre-line;
                 @media(max-width: 620px) {
                     display: none;
                 }
@@ -120,9 +115,15 @@
             display: flex;
             flex-direction: row;
             position: relative;
-            @media(max-width: 620px){
-                flex-direction: column;
+            @media(max-width: 1100px) {
                 margin-left: 0;
+                min-width: 95vw;
+                border-top: none;
+                gap: 0.05rem;
+            }
+            @media(max-width: 575px) {
+                flex-direction: column !important;
+                min-width: 90vw;
             }
         }
 
@@ -167,6 +168,10 @@
             left: 0;
             bottom: 0;
             max-width: 100%;
+            @media(max-width: 520px) {
+                margin-top: 2rem;
+                left: -0.5rem;
+            }
         }
     }
 }
